--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,16 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
   - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+    url: /talks/
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Blog"
+    url: /posts/
+    
+  - title: "Software"
+    url: /software/
     
   - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: http://mbernste.github.io/files/CV.pdf
+   
+#  - title: "Guide"
+#    url: /markdown/
