--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Blog"
     url: /posts/
     
-  - title: "Software"
-    url: /software/
+  - title: "Publications"
+    url: /publications/
     
   - title: "CV"
     url: http://mbernste.github.io/files/CV.pdf
