--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,12 +5,12 @@ main:
     
   - title: "Blog"
     url: /posts/
-    
+
   - title: "Publications"
     url: /publications/
     
   - title: "CV"
-    url: http://mbernste.github.io/files/CV.pdf
+    url: http://baruchao.github.io/files/CV.pdf
    
 #  - title: "Guide"
 #    url: /markdown/
