--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Talks"
     url: /talks/
     
-  - title: "Blog"
-    url: /posts/
+  - title: "Posts"
+    url: /year-archive/
 
   - title: "Publications"
     url: /publications/
