--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /talks/
     
   - title: "Posts"
-    url: /year-archive/
+    url: /posts/
 
   - title: "Publications"
     url: /publications/
