--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Baruch Assif (Osoveskiy)"
   avatar           : "profile.png"
-  bio              : "Database Administrator @ AWS"
+  bio              : "Solutions Architect,Data Specialist @ AWS"
   location         : "Israel"
   employer         : "AWS"
   pubmed           : ""
