--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : https://www.youtube.com/results?search_query=baruch+assif
+  youtube          : "https://www.youtube.com/results?search_query=baruch+assif"
   wikipedia        :
 
 
